<resources>
    <string name="app_name">PurrPulse</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="title_gamelist">Game List</string>
    <string name="launch_libgdx">YOOOO</string>
    <string name="game_selection_1">Mindless</string>
    <string name="game_selection_2">Semi-Mindful</string>
    <string name="game_selection_3">Mindful</string>
    <string name="quality_switch_text">High Quality</string>

</resources>