<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shop">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iii.purrpulse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_gamelist"
            app:destination="@id/navigation_gamelist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.iii.purrpulse.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.iii.purrpulse.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_gamelist"
            app:destination="@id/navigation_gamelist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gamelist"
        android:name="com.iii.purrpulse.ui.gamelist.GamelistFragment"
        android:label="@string/title_gamelist"
        tools:layout="@layout/fragment_gamelist" />
</navigation>